--
-- PostgreSQL database dump
--

\restrict meQpcZexAUzDFA8ZOd2oY4yebdNAnNtlHwyYNSgaOaOgz0v6RkNZdYkLnHsf8mh

-- Dumped from database version 18.0
-- Dumped by pg_dump version 18.0

-- Started on 2025-10-19 20:16:05

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET transaction_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- TOC entry 222 (class 1259 OID 16433)
-- Name: cars; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.cars (
    id bigint NOT NULL,
    brand character varying(255) NOT NULL,
    model character varying(255) NOT NULL,
    year integer NOT NULL,
    user_id bigint NOT NULL
);


ALTER TABLE public.cars OWNER TO postgres;

--
-- TOC entry 221 (class 1259 OID 16432)
-- Name: cars_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.cars ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.cars_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 226 (class 1259 OID 16492)
-- Name: forum_comments; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.forum_comments (
    id bigint NOT NULL,
    content character varying(2000) NOT NULL,
    created_at timestamp(6) without time zone,
    author_id bigint NOT NULL,
    post_id bigint NOT NULL
);


ALTER TABLE public.forum_comments OWNER TO postgres;

--
-- TOC entry 225 (class 1259 OID 16491)
-- Name: forum_comments_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.forum_comments ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.forum_comments_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 228 (class 1259 OID 16504)
-- Name: forum_posts; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.forum_posts (
    id bigint NOT NULL,
    category character varying(255) DEFAULT 'GENERAL'::character varying NOT NULL,
    content character varying(2000) NOT NULL,
    created_at timestamp(6) without time zone,
    rating integer,
    title character varying(120) NOT NULL,
    updated_at timestamp(6) without time zone,
    author_id bigint NOT NULL,
    CONSTRAINT forum_posts_category_check CHECK (((category)::text = ANY (ARRAY[('GENERAL'::character varying)::text, ('CARS'::character varying)::text, ('SERVICE'::character varying)::text])))
);


ALTER TABLE public.forum_posts OWNER TO postgres;

--
-- TOC entry 227 (class 1259 OID 16503)
-- Name: forum_posts_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.forum_posts ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.forum_posts_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 234 (class 1259 OID 16652)
-- Name: post_reactions; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.post_reactions (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    type character varying(20) NOT NULL,
    updated_at timestamp(6) without time zone NOT NULL,
    post_id bigint NOT NULL,
    user_id bigint NOT NULL,
    CONSTRAINT post_reactions_type_check CHECK (((type)::text = ANY ((ARRAY['LIKE'::character varying, 'LOVE'::character varying, 'LAUGH'::character varying, 'WOW'::character varying, 'SAD'::character varying, 'ANGRY'::character varying])::text[])))
);


ALTER TABLE public.post_reactions OWNER TO postgres;

--
-- TOC entry 233 (class 1259 OID 16651)
-- Name: post_reactions_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.post_reactions ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.post_reactions_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 224 (class 1259 OID 16451)
-- Name: service_appointments; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.service_appointments (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone,
    description character varying(255) NOT NULL,
    service_date_time timestamp(6) without time zone NOT NULL,
    status character varying(255) NOT NULL,
    car_id bigint NOT NULL,
    user_id bigint NOT NULL,
    center_id bigint NOT NULL,
    CONSTRAINT service_appointments_status_check CHECK (((status)::text = ANY ((ARRAY['PENDING'::character varying, 'CONFIRMED'::character varying, 'CANCELLED'::character varying])::text[])))
);


ALTER TABLE public.service_appointments OWNER TO postgres;

--
-- TOC entry 223 (class 1259 OID 16450)
-- Name: service_appointments_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.service_appointments ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.service_appointments_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 230 (class 1259 OID 16534)
-- Name: service_centers; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.service_centers (
    id bigint NOT NULL,
    address character varying(255) NOT NULL,
    city character varying(255) NOT NULL,
    name character varying(255) NOT NULL,
    place_id character varying(255)
);


ALTER TABLE public.service_centers OWNER TO postgres;

--
-- TOC entry 229 (class 1259 OID 16533)
-- Name: service_centers_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.service_centers ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.service_centers_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 232 (class 1259 OID 16546)
-- Name: service_votes; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.service_votes (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone,
    rating integer NOT NULL,
    vote_month integer NOT NULL,
    vote_year integer NOT NULL,
    center_id bigint NOT NULL,
    user_id bigint NOT NULL,
    CONSTRAINT service_votes_rating_check CHECK (((rating <= 5) AND (rating >= 1)))
);


ALTER TABLE public.service_votes OWNER TO postgres;

--
-- TOC entry 231 (class 1259 OID 16545)
-- Name: service_votes_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.service_votes ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.service_votes_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 220 (class 1259 OID 16390)
-- Name: users; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.users (
    id bigint NOT NULL,
    email character varying(255),
    name character varying(255),
    password character varying(255),
    role character varying(255) DEFAULT 'USER'::character varying
);


ALTER TABLE public.users OWNER TO postgres;

--
-- TOC entry 219 (class 1259 OID 16389)
-- Name: users_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.users ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 5083 (class 0 OID 16433)
-- Dependencies: 222
-- Data for Name: cars; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.cars (id, brand, model, year, user_id) FROM stdin;
1	Opel	Corsa D	2008	1
2	Mercedes	E-Class	2006	2
3	Opel	Vectra B2	1999	3
4	Volkswagen	Golf 4	2003	4
5	Nissan	Leaf	2010	1
7	Mercedes	E500	1994	1
6	Audi	A8	2004	5
8	Opel	Corsa D	2008	5
11	Subaru	Impreza WRX STI	2002	5
\.


--
-- TOC entry 5087 (class 0 OID 16492)
-- Dependencies: 226
-- Data for Name: forum_comments; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.forum_comments (id, content, created_at, author_id, post_id) FROM stdin;
1	Valóban drágán dolgoznak - aud a6 c5 vezérlés.	2025-10-16 10:01:20.280026	5	2
2	Megfelelő szervíz mellett kimennek a világból.	2025-10-16 10:03:54.336261	7	5
\.


--
-- TOC entry 5089 (class 0 OID 16504)
-- Dependencies: 228
-- Data for Name: forum_posts; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.forum_posts (id, category, content, created_at, rating, title, updated_at, author_id) FROM stdin;
1	GENERAL	[svc:1] Nagyon gyors, precíz munkavégzés.	2025-10-16 10:00:08.320623	\N	Tapasztalat	2025-10-16 10:00:08.320623	1
2	GENERAL	[svc:4] Drága óradíj - vezérlés csere D corsán	2025-10-16 10:00:30.762853	\N	Tapasztalat	2025-10-16 10:00:30.762853	1
3	GENERAL	[svc:6] Szélvédő cserére vittem be az autómat és 2 óra alatt készen is lettek.	2025-10-16 10:00:53.077259	\N	Tapasztalat	2025-10-16 10:00:53.077259	1
4	GENERAL	[svc:1] Autópálya tempó után "recsegős" hangot hallottam az autó bal elejétől - 1 gyors tesztkör alatt megállapították, hogy mi a probléma, majd ~3 órán belül ki is cserélték az adott alkatrészt.	2025-10-16 10:02:17.261611	\N	Tapasztalat	2025-10-16 10:02:17.261611	5
5	GENERAL	Tapasztalatok A8 D3 4.2 TDI-ről?	2025-10-16 10:02:45.619809	\N	Tapasztalat	2025-10-16 10:02:45.619809	5
\.


--
-- TOC entry 5095 (class 0 OID 16652)
-- Dependencies: 234
-- Data for Name: post_reactions; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.post_reactions (id, created_at, type, updated_at, post_id, user_id) FROM stdin;
1	2025-10-16 10:00:09.863984	LOVE	2025-10-16 10:00:09.863984	1	1
2	2025-10-16 10:01:04.13716	WOW	2025-10-16 10:01:04.13716	3	5
3	2025-10-16 10:01:06.621287	ANGRY	2025-10-16 10:01:06.621287	2	5
4	2025-10-16 10:02:18.01956	LOVE	2025-10-16 10:02:18.01956	4	5
5	2025-10-16 10:03:53.581675	LIKE	2025-10-16 10:03:53.581675	5	7
6	2025-10-18 17:10:42.837153	LIKE	2025-10-18 17:10:43.49282	5	1
7	2025-10-18 17:11:25.329367	ANGRY	2025-10-18 17:11:25.329367	4	1
\.


--
-- TOC entry 5085 (class 0 OID 16451)
-- Dependencies: 224
-- Data for Name: service_appointments; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.service_appointments (id, created_at, description, service_date_time, status, car_id, user_id, center_id) FROM stdin;
1	2025-10-07 15:19:56.749915	Olajcsere + átvizsgálás	2025-10-14 10:00:56.749915	PENDING	1	1	1
2	2025-10-07 15:19:56.749915	Fékbetét csere	2025-10-17 09:30:56.749915	CONFIRMED	2	2	2
4	2025-10-07 19:26:59.644498	Kézifék bobden  · Szerviz: Műszaki+ Bosch Car Service	2025-10-30 16:26:00	PENDING	1	1	3
5	2025-10-07 20:35:41.884113	asd · Szerviz: Műszaki+ Bosch Car Service	2025-10-28 16:35:00	PENDING	6	5	3
10	2025-10-11 16:52:47.772972	hmn · Szerviz: RapidAuto Szerviz	2025-10-13 16:52:00	PENDING	6	5	1
12	2025-10-14 05:50:01.164011	143242 · Szerviz: RapidAuto Szerviz	2025-10-20 08:49:00	PENDING	6	5	1
13	2025-10-14 06:15:43.114415	na · Szerviz: Platinum Garage	2025-10-20 08:15:00	PENDING	8	5	2
11	2025-10-12 08:46:00.925509	Fékcsere · Szerviz: Műszaki+ Bosch Car Service	2025-10-21 12:45:00	CANCELLED	1	1	3
7	2025-10-08 22:56:38.957047	123 · Szerviz: Platinum Garage	2025-10-21 16:56:00	CANCELLED	5	1	2
8	2025-10-10 10:01:04.592327	Hengerfej tömítés · Szerviz: Platinum Garage	2025-10-14 10:00:00	CANCELLED	7	1	2
9	2025-10-10 21:59:42.337947	kifli tárcsázás · Szerviz: Műszaki+ Bosch Car Service	2025-10-27 09:59:00	CANCELLED	5	1	3
14	2025-10-14 06:16:04.861463	na · Szerviz: RapidAuto Szerviz	2025-10-20 08:16:00	CANCELLED	8	5	1
3	2025-10-07 17:34:09.615179	Olajcsere · Szerviz: RapidAuto Szerviz	2025-10-20 15:34:00	CANCELLED	6	5	1
6	2025-10-07 23:21:28.448231	jóskapista · Szerviz: RapidAuto Szerviz	2025-10-29 10:21:00	CANCELLED	6	5	1
15	2025-10-18 17:14:50.096564	Kézifék bobden · Szerviz: Műszaki+ Bosch Car Service	2025-10-30 12:00:00	PENDING	1	1	3
\.


--
-- TOC entry 5091 (class 0 OID 16534)
-- Dependencies: 230
-- Data for Name: service_centers; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.service_centers (id, address, city, name, place_id) FROM stdin;
1	XI., Fehérvári út 12.	Budapest	RapidAuto Szerviz	\N
2	Szent István út 5.	Győr	Platinum Garage	\N
3	Nagyerdő krt. 8.	Debrecen	Műszaki+ Bosch Car Service	\N
4	IV., Váci út 120.	Budapest	RapidAuto Szerviz – Újpest	\N
5	Szent Imre u. 12.	Győr	Platinum Garage – Dél	\N
6	Bartók Béla út 8.	Debrecen	Bosch Car Service – Nyugat	ChIJabcdEFG...
\.


--
-- TOC entry 5093 (class 0 OID 16546)
-- Dependencies: 232
-- Data for Name: service_votes; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.service_votes (id, created_at, rating, vote_month, vote_year, center_id, user_id) FROM stdin;
2	2025-10-07 19:05:14.733869	2	10	2025	2	1
3	2025-10-10 13:36:06.76137	3	10	2025	3	1
4	2025-10-10 13:36:28.225607	5	10	2025	1	5
5	2025-10-11 18:04:35.97495	1	10	2025	3	5
6	2025-10-14 08:05:43.691318	4	10	2025	2	5
7	2025-10-16 08:40:19.253107	4	10	2025	5	1
1	2025-10-07 19:04:58.494525	5	10	2025	1	1
8	2025-10-16 08:40:28.17486	4	10	2025	6	1
\.


--
-- TOC entry 5081 (class 0 OID 16390)
-- Dependencies: 220
-- Data for Name: users; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.users (id, email, name, password, role) FROM stdin;
1	anna@example.com	Anna	$2a$10$ZFlE1xFL/Ydno6J2.aWcvuADs4mzzkpEum778qXT4QqkT6nYP4h5O	ADMIN
2	apa@example.com	Apa	$2a$10$ENDhup8U.34WJWBcmWL1JePRwPPPyf3h6k6Sb1y3Z/JvTnIdjuqCW	ADMIN
3	toldi@example.com	Toldi	$2a$10$PvsZ3pT4wI7M5b..7vxfc.QpEuuUqp/qq/KefxTfMQKd2dy2PP5JW	ADMIN
4	adzam@example.com	Ádzám	$2a$10$kzZ3GdV7aqHEhnkVmzQscuZmNX8WtotJ5v8KpWvg2IZO8jL4xEcM2	ADMIN
5	kocsissasa@gmail.com	kocsissasa	$2a$10$mj9NshpxSD1mp4QBhuI5sut1g5E74yOl3rgVulBTFHqJQNJE9Gv42	USER
6	joskapista@gmail.com	12312312	$2a$10$MkpHN60Lv.f6J0GNpreJQ.5zpgKtMBOddjFUSaVH6dCuKwslGDcxW	USER
7	husztiadam@gmail.com	Huszti Ádám	$2a$10$8lRSNEU30QKYF5fiF1smweMWLB54LD6FgomF1jVw09rJcxKP8Y436	USER
\.


--
-- TOC entry 5101 (class 0 OID 0)
-- Dependencies: 221
-- Name: cars_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.cars_id_seq', 11, true);


--
-- TOC entry 5102 (class 0 OID 0)
-- Dependencies: 225
-- Name: forum_comments_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.forum_comments_id_seq', 2, true);


--
-- TOC entry 5103 (class 0 OID 0)
-- Dependencies: 227
-- Name: forum_posts_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.forum_posts_id_seq', 5, true);


--
-- TOC entry 5104 (class 0 OID 0)
-- Dependencies: 233
-- Name: post_reactions_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.post_reactions_id_seq', 7, true);


--
-- TOC entry 5105 (class 0 OID 0)
-- Dependencies: 223
-- Name: service_appointments_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.service_appointments_id_seq', 15, true);


--
-- TOC entry 5106 (class 0 OID 0)
-- Dependencies: 229
-- Name: service_centers_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.service_centers_id_seq', 6, true);


--
-- TOC entry 5107 (class 0 OID 0)
-- Dependencies: 231
-- Name: service_votes_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.service_votes_id_seq', 8, true);


--
-- TOC entry 5108 (class 0 OID 0)
-- Dependencies: 219
-- Name: users_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.users_id_seq', 7, true);


--
-- TOC entry 4902 (class 2606 OID 16444)
-- Name: cars cars_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.cars
    ADD CONSTRAINT cars_pkey PRIMARY KEY (id);


--
-- TOC entry 4906 (class 2606 OID 16502)
-- Name: forum_comments forum_comments_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.forum_comments
    ADD CONSTRAINT forum_comments_pkey PRIMARY KEY (id);


--
-- TOC entry 4908 (class 2606 OID 16516)
-- Name: forum_posts forum_posts_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.forum_posts
    ADD CONSTRAINT forum_posts_pkey PRIMARY KEY (id);


--
-- TOC entry 4917 (class 2606 OID 16663)
-- Name: post_reactions post_reactions_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.post_reactions
    ADD CONSTRAINT post_reactions_pkey PRIMARY KEY (id);


--
-- TOC entry 4904 (class 2606 OID 16464)
-- Name: service_appointments service_appointments_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_appointments
    ADD CONSTRAINT service_appointments_pkey PRIMARY KEY (id);


--
-- TOC entry 4910 (class 2606 OID 16544)
-- Name: service_centers service_centers_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_centers
    ADD CONSTRAINT service_centers_pkey PRIMARY KEY (id);


--
-- TOC entry 4912 (class 2606 OID 16557)
-- Name: service_votes service_votes_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_votes
    ADD CONSTRAINT service_votes_pkey PRIMARY KEY (id);


--
-- TOC entry 4898 (class 2606 OID 16399)
-- Name: users uk6dotkott2kjsp8vw4d0m25fb7; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT uk6dotkott2kjsp8vw4d0m25fb7 UNIQUE (email);


--
-- TOC entry 4919 (class 2606 OID 16665)
-- Name: post_reactions uk_post_user; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.post_reactions
    ADD CONSTRAINT uk_post_user UNIQUE (post_id, user_id);


--
-- TOC entry 4914 (class 2606 OID 16559)
-- Name: service_votes ukoktnroylaoy625d9mk1d4qs2f; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_votes
    ADD CONSTRAINT ukoktnroylaoy625d9mk1d4qs2f UNIQUE (user_id, center_id, vote_year, vote_month);


--
-- TOC entry 4921 (class 2606 OID 16686)
-- Name: post_reactions ukqx1p0wtweq8mgrtenw93jdqns; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.post_reactions
    ADD CONSTRAINT ukqx1p0wtweq8mgrtenw93jdqns UNIQUE (post_id, user_id);


--
-- TOC entry 4900 (class 2606 OID 16397)
-- Name: users users_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT users_pkey PRIMARY KEY (id);


--
-- TOC entry 4915 (class 1259 OID 16694)
-- Name: idx_post_reactions_post; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_post_reactions_post ON public.post_reactions USING btree (post_id);


--
-- TOC entry 4931 (class 2606 OID 16666)
-- Name: post_reactions fk1lgcpqh8uiv234hda94gaxscf; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.post_reactions
    ADD CONSTRAINT fk1lgcpqh8uiv234hda94gaxscf FOREIGN KEY (post_id) REFERENCES public.forum_posts(id);


--
-- TOC entry 4923 (class 2606 OID 16630)
-- Name: service_appointments fk2qmp7n6voe7vnbjvjklkw53vr; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_appointments
    ADD CONSTRAINT fk2qmp7n6voe7vnbjvjklkw53vr FOREIGN KEY (center_id) REFERENCES public.service_centers(id);


--
-- TOC entry 4924 (class 2606 OID 16465)
-- Name: service_appointments fk775kx45obv5e6ha7whi9u8bda; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_appointments
    ADD CONSTRAINT fk775kx45obv5e6ha7whi9u8bda FOREIGN KEY (car_id) REFERENCES public.cars(id);


--
-- TOC entry 4926 (class 2606 OID 16517)
-- Name: forum_comments fkaagdun8roxwogrhpfs97vfcyl; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.forum_comments
    ADD CONSTRAINT fkaagdun8roxwogrhpfs97vfcyl FOREIGN KEY (author_id) REFERENCES public.users(id);


--
-- TOC entry 4927 (class 2606 OID 16522)
-- Name: forum_comments fkeb7i9uh14fy77papa5wfpfds4; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.forum_comments
    ADD CONSTRAINT fkeb7i9uh14fy77papa5wfpfds4 FOREIGN KEY (post_id) REFERENCES public.forum_posts(id);


--
-- TOC entry 4929 (class 2606 OID 16565)
-- Name: service_votes fkgjft83x0pf4glpxd926kfuoil; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_votes
    ADD CONSTRAINT fkgjft83x0pf4glpxd926kfuoil FOREIGN KEY (user_id) REFERENCES public.users(id);


--
-- TOC entry 4930 (class 2606 OID 16560)
-- Name: service_votes fknnmnqn2swjfj8pbnnabpyfsjp; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_votes
    ADD CONSTRAINT fknnmnqn2swjfj8pbnnabpyfsjp FOREIGN KEY (center_id) REFERENCES public.service_centers(id);


--
-- TOC entry 4928 (class 2606 OID 16527)
-- Name: forum_posts fkpsovhjndrj3obmt1d0p9nhr0u; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.forum_posts
    ADD CONSTRAINT fkpsovhjndrj3obmt1d0p9nhr0u FOREIGN KEY (author_id) REFERENCES public.users(id);


--
-- TOC entry 4932 (class 2606 OID 16671)
-- Name: post_reactions fkptar8f3u0qt7ssjksu2hxme03; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.post_reactions
    ADD CONSTRAINT fkptar8f3u0qt7ssjksu2hxme03 FOREIGN KEY (user_id) REFERENCES public.users(id);


--
-- TOC entry 4922 (class 2606 OID 16445)
-- Name: cars fkqw4c8e6nqrvy3ti1xj8w8wyc9; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.cars
    ADD CONSTRAINT fkqw4c8e6nqrvy3ti1xj8w8wyc9 FOREIGN KEY (user_id) REFERENCES public.users(id);


--
-- TOC entry 4925 (class 2606 OID 16470)
-- Name: service_appointments fkt72jjpl5qj108goru7rn85ytu; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.service_appointments
    ADD CONSTRAINT fkt72jjpl5qj108goru7rn85ytu FOREIGN KEY (user_id) REFERENCES public.users(id);


-- Completed on 2025-10-19 20:16:05

--
-- PostgreSQL database dump complete
--

\unrestrict meQpcZexAUzDFA8ZOd2oY4yebdNAnNtlHwyYNSgaOaOgz0v6RkNZdYkLnHsf8mh

