package com.example.carapp.model;

public enum ForumCategory {
    GENERAL,   // Általános beszélgetés
    CARS,      // Autók
    SERVICE    // Szerviz / tapasztalatok
}
