// com/example/carapp/model/ReactionType.java
package com.example.carapp.model;

public enum ReactionType {
    LIKE, LOVE, LAUGH, WOW, SAD, ANGRY
}
