package com.example.carapp.model;

public enum Role {
    USER,   // Alap felhasználó
    ADMIN   // Adminisztrátor (több jogosultság)
}
